--- a/app/globals.css
+++ b/app/globals.css
@@ -182,8 +182,8 @@ body {
 }
 
 .gradient-navbar {
-  background: rgb(26,16,10);
-  background: linear-gradient(180deg, rgba(26,16,10,1) 0%, rgba(30,41,59,1) 100%);
+  background: rgb(0,0,0);
+  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(30,41,59,1) 50%, rgba(0,0,0,1) 100%);
 }
 
 
